# runtime-contract

./: .gitignore  .gitleaks.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DCO.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_0.1.2.md  SECURITY.md  action.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  runtime-contract-code-scanning.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  code-scanning.yml  protected-files.yml  publish.yml  security.yml
docs/: D1.04_POLICY_PROBE.md  SCOPE.md  analyzer-api.md  cli-reference.md  domain-model.md  github-action-release.md  github-code-scanning.md  json-report-v1.md  known-risks.md  normalization-api.md  output-formats.md  release-notes-v0.1.0.md  rule-catalog.md  rules.md  runtime-contract-yaml.md  security-and-privacy.md  source-to-sink-graph.md
examples/compose-flow/: compose.yaml
examples/demo/: README.md
examples/demo/broken/: Dockerfile  compose.yaml  kubernetes.yaml  runtime-contract.yaml
examples/demo/fixed/: .env.example  Dockerfile  compose.yaml  kubernetes.yaml  runtime-contract.yaml
examples/demo/outputs/: broken.json  broken.sarif  broken.terminal  fixed.json  fixed.sarif  fixed.terminal
examples/full/: runtime-contract.yaml
examples/full/deploy/: compose.yaml
examples/report-fixture/: runtime-contract.yaml
examples/report-fixture/api/: settings.py
examples/reports/: runtime-contract-v1.json
examples/scan-flow/api/: Dockerfile  compose.yaml  settings.py
schemas/: runtime-contract-analysis-result-v1.schema.json  runtime-contract-contract-v1.schema.json  runtime-contract-diff-result-v1.schema.json  runtime-contract-scan-result-v1.schema.json
scripts/: __init__.py  generate_analysis_schema.py  generate_config_schema.py  generate_demo_outputs.py  generate_diff_schema.py  generate_domain_schema.py  generate_output_goldens.py  generate_scan_schema.py  quality-gates.sh
scripts/action/: __init__.py  runner.py
scripts/ci/: __init__.py  check_branch_coverage.py  check_dco.py  e2e_wheel.py  minimum-constraints.txt  profile_monorepo.py  protected_files.py  verify_artifacts.py  verify_sha256.py
src/runtime_contract/: __init__.py  __main__.py  cli.py  diff_report.py  discovery.py  errors.py  evaluation.py  rules.py  security.py  sensitivity.py
tests/: __init__.py  test_check.py  test_cli.py  test_config.py  test_diff.py  test_discovery.py  test_documentation_contract.py  test_domain.py  test_explain.py  test_full_stack_fixture.py  test_output_goldens.py  test_public_api.py  test_public_demo.py  test_readme.py  test_rtc001.py  test_rtc002.py  test_rtc005.py  test_rtc006_rtc007.py  test_rtc_policy.py  test_rules.py  test_scan.py  test_scan_format.py  test_security.py  test_sensitivity.py  test_stability.py  test_terminal_renderer.py
tests/action/: __init__.py  test_action_metadata.py  test_action_workflow.py  test_runner.py
tests/analysis/: __init__.py  conftest.py  doubles.py  test_compose.py  test_cross_analyzer_contract.py  test_dockerfile.py  test_dotenv.py  test_javascript_typescript.py  test_kubernetes.py  test_models.py  test_python_ast.py  test_registry.py  test_resolver.py  test_schema.py
tests/ci/: __init__.py  test_branch_coverage.py  test_ci_matrix.py  test_dco.py  test_protected_files.py  test_quality_gates_script.py  test_resource_budgets.py  test_schema_artifacts.py  test_supply_chain.py  test_verify_sha256.py
tests/compose/: __init__.py  test_loader.py  test_project.py
tests/fixtures/: terminal-renderer-ci.txt  terminal-renderer-tty.txt
tests/flow/: test_graph.py
tests/kubernetes/: __init__.py  test_environment.py  test_loader.py  test_presence.py
tests/normalization/: test_normalization.py
tests/precedence/: test_precedence.py
(+96 files in other folders)
