[build-system]
requires = ["uv_build>=0.11.28,<0.12"]
build-backend = "uv_build"

[project]
name = "runtime-contract"
version = "0.1.0.dev0"
description = "Static, local CLI for checking environment-variable delivery contracts."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Piotr Adamski" }]
maintainers = [{ name = "Piotr Adamski" }]
dependencies = [
    "pathspec>=1.0.4,<2",
    "pydantic>=2.13.4,<3",
    "pyyaml>=6.0.3,<7",
    "typer>=0.26.8,<1",
]

[project.scripts]
runtime-contract = "runtime_contract.cli:main"

[dependency-groups]
dev = [
    "diff-cover>=10.3,<11",
    "jsonschema>=4.26,<5",
    "mypy>=2.2,<3",
    "pytest>=9.1.1,<10",
    "pytest-cov>=7.1,<8",
    "ruff>=0.15.21,<0.16",
    "types-jsonschema>=4.26,<5",
    "types-pyyaml>=6.0.12.20250915,<7",
]

[tool.coverage.run]
branch = true
source = ["runtime_contract"]

[tool.coverage.xml]
output = "coverage.xml"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers"]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "B", "SIM", "RUF"]
