[build-system]
requires = ["uv_build>=0.11.28,<0.12"]
build-backend = "uv_build"

[project]
name = "runtime-contract"
version = "0.1.0"
description = "Static, local CLI for checking environment-variable delivery contracts."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Piotr Adamski" }]
maintainers = [{ name = "Piotr Adamski" }]
keywords = ["cli", "configuration", "devops", "environment-variables", "static-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "pathspec>=1.0.4,<2",
    "pydantic>=2.13.4,<3",
    "pyyaml>=6.0.3,<7",
    "tree-sitter>=0.25.2,<0.27",
    "tree-sitter-javascript>=0.25.0,<0.26",
    "tree-sitter-typescript>=0.23.2,<0.24",
    "typer>=0.26.8,<1",
]

[project.urls]
Changelog = "https://github.com/piotr-adamski/runtime-contract/blob/main/CHANGELOG.md"
Documentation = "https://github.com/piotr-adamski/runtime-contract#readme"
Issues = "https://github.com/piotr-adamski/runtime-contract/issues"
Repository = "https://github.com/piotr-adamski/runtime-contract"

[project.scripts]
runtime-contract = "runtime_contract.cli:main"

[dependency-groups]
dev = [
    "diff-cover>=10.3,<11",
    "jsonschema>=4.26,<5",
    "mypy>=2.2,<3",
    "pytest>=9.1.1,<10",
    "pytest-cov>=7.1,<8",
    "pipx>=1.8.0,<2",
    "ruff>=0.15.21,<0.16",
    "twine>=6.2.0,<7",
    "types-jsonschema>=4.26,<5",
    "types-pyyaml>=6.0.12.20250915,<7",
]

[tool.coverage.run]
branch = true
source = ["runtime_contract"]

[tool.coverage.xml]
output = "coverage.xml"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers"]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "B", "SIM", "RUF"]
